[package]
name = "nft-smt"
version = "0.3.0"
edition = "2018"


[dependencies]
cfg-if = "0.1"
blake2b-ref = "0.3"
ckb-std = {version = "0.7.1", optional = true}
ckb-types = {version = "0.101.1", optional = true}
molecule = {version = "0.6.0", default_features = false, optional = true}
sparse-merkle-tree = {version = "0.5.2", default_features = false}


[features]
default = ["std", "ckb-types"]
std = []
no-std = ["ckb-std","molecule"]
