[package]
name = "class-type"
version = "0.10.0"
edition = "2018"

[dependencies]
ckb-std = "0.9.0"
script-utils = { path = "../script-utils" }
nft-smt = {package = "compact-nft-smt", git = "https://github.com/nervina-labs/compact-nft-smt", branch = "master", default_features = false, features = ["no-std"] }