[package]
name = "compact-nft-type"
version = "0.3.0"
authors = ["duanyytop <duanyytop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.7.1"
script-utils = { path = "../script-utils" }
nft-smt = {path = "../../nft-smt", default_features = false, features = ["no-std"]}