[package]
name = "compact-nft-type"
version = "0.10.0"
authors = ["duanyytop <duanyytop@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.9.0"
script-utils = { path = "../script-utils" }
nft-smt = {package = "compact-nft-smt", git = "https://github.com/nervina-labs/compact-nft-smt", branch = "develop", default_features = false, features = ["no-std"] }