[package]
name = "compact-registry-type"
version = "0.3.0"
edition = "2018"

[dependencies]
ckb-std = "0.7.4"
script-utils = { path = "../script-utils" }
nft-smt = {path = "../../nft-smt", default_features = false, features = ["no-std"]}
ckb-lib-smt = {package = "ckb-lib-smt", git = "https://github.com/lay2dev/ckb-lib-c-script", branch = "main"}