[package]
name = "script-utils"
version = "0.10.0"
edition = "2018"

[dependencies]
ckb-std = "0.9.0"
ckb-lib-smt = {package = "ckb-lib-smt", git = "https://github.com/lay2dev/ckb-lib-c-script", branch = "main"}
nft-smt = {package = "compact-nft-smt", git = "https://github.com/nervina-labs/compact-nft-smt", branch = "master", default_features = false, features = ["no-std"] }